@@ -25,6 +25,7 @@
 #include "Util.h"
 #include "ZooKeeperQuorumServer.h"
 
+#ifdef THREADED
 class TestReconfigServer : public CPPUNIT_NS::TestFixture {
     CPPUNIT_TEST_SUITE(TestReconfigServer);
 #ifdef THREADED
@@ -33,7 +34,6 @@ class TestReconfigServer : public CPPUNIT_NS::TestFixture {
     CPPUNIT_TEST(testRemoveFollower);
     CPPUNIT_TEST(testReconfigFailureWithoutAuth);
     CPPUNIT_TEST(testReconfigFailureWithoutServerSuperuserPasswordConfigured);
-#endif
     CPPUNIT_TEST_SUITE_END();
 
   public:
@@ -418,3 +418,4 @@ testReconfigFailureWithoutServerSuperuserPasswordConfigured() {
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(TestReconfigServer);
+#endif
